--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^1.35.4",
