--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^1.35.4",
+		"immer": "^9.0.15",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.3.0",
+		"styled-components": "^5.3.5",
 		"zustand": "^4.0.0-rc.4"
 	},
 	"devDependencies": {
+		"@types/node": "^18.6.1",
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
 		"@types/styled-components": "^5.1.25",
 		"@vitejs/plugin-react": "^2.0.0",
-		"gh-pages": "^3.2.3",
 		"dotenv": "^16.0.1",
+		"gh-pages": "^3.2.3",
 		"typescript": "^4.6.4",
 		"vite": "^3.0.0"
 	}
