--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^1.35.4",
+		"@supabase/supabase-js": "^1.35.6",
 		"immer": "^9.0.15",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.3.0",
 		"styled-components": "^5.3.5",
-		"zustand": "^4.0.0-rc.4"
+		"zustand": "^4.0.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.6.1",
-		"@types/react": "^18.0.15",
+		"@types/node": "^18.6.5",
+		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@types/styled-components": "^5.1.25",
 		"@vitejs/plugin-react": "^2.0.0",
 		"dotenv": "^16.0.1",
-		"gh-pages": "^3.2.3",
-		"typescript": "^4.6.4",
-		"vite": "^3.0.0"
+		"gh-pages": "^4.0.0",
+		"typescript": "^4.7.4",
+		"vite": "^3.0.4"
 	}
 }
